--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
     <link rel="stylesheet" href="assets/css/style.css" />
 
-    <title>Document</title>
+    <title>Love Maths!</title>
+
+    <!-- favicon for deployment -->
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
   </head>
 
   <body>
